tree-sitter-harn/grammar.js
    source_file: ($) => topLevelSeparated($, $._top_level_item),

    _top_level_item: ($) =>
      choice(
        $.attributed_declaration,
        $.pipeline_declaration,
        $.import_declaration,
        $._statement
      ),

    // Attributes: `@name` or `@name(arg, key: value)`. Stack on the
    // declaration that follows. Mirrors the parser in
    // crates/harn-parser/src/parser.rs (parse_attributed_decl), whose
    // `skip_newlines()` swallows any run of newlines between an attribute and
    // the declaration it decorates.
    //
    // `repeat($._line_sep)` (not `optional`) is required because a comment
    // between the attribute and the declaration (e.g. a doc comment:
    // `@complexity(allow)` / `/** ... */` / `pub fn`) is lexed as an `extras`
    // node sandwiched between TWO separators — the newline after the attribute
    // and the newline after the comment. `optional` only consumed the first,
    // leaving the second to error out before the declaration. The canonical
    // lexer treats comments as trivia, so this construct is valid Harn.
    _newline: (_) => "\n",

    // --- Comments ---

    comment: (_) =>
      token(
        choice(
          seq("//", /[^\n]*/),
          // Shebang line. Lexer only honors at offset 0, but for editor
          // highlighting we accept it anywhere (false positives are harmless).
          seq("#!", /[^\n]*/),
          // Block comments, supports one level of nesting
          seq(
            "/*",
            /[^*]*\*+([^/*][^*]*\*+)*/,
            "/"
          ),
          seq(
            "/*",
            repeat(choice(
              /[^/*]/,
              seq("/", /[^*]/),
              seq("*", /[^/]/),
              seq("/*", /[^*]*\*+([^/*][^*]*\*+)*/, "/")
            )),
            "*/"
          )
        )
      ),

    // --- Top-level declarations ---

    pipeline_declaration: ($) =>
      seq(
        optional("pub"),
        "pipeline",
        field("name", $.identifier),
        "(",
        parameterList($),
        ")",
        optional(seq("->", field("return_type", $.type_annotation))),
        optional(seq("throws", field("throws", $.type_annotation))),
        optional(seq("extends", field("parent", $.identifier))),
        $.block
      ),

    import_declaration: ($) =>
      choice(
        seq(optional("pub"), "import", $.string_literal),
        seq(
          optional("pub"),
          "import",
          "*",
          "as",
          field("alias", $.identifier),
          "from",
          $.string_literal
        ),
        seq(
          optional("pub"),
          "import",
          "{",
          commaSep1($.identifier),
          optional(","),
          "}",
          "from",
          $.string_literal
        ),
        seq(
          optional("pub"),
          "import",
          "{",
          $._newline,
          $.identifier,
          repeat(seq(",", $._newline, $.identifier)),
          optional(seq(",", $._newline)),
          "}",
          "from",
          $.string_literal
        ),
        seq(
          optional("pub"),
          "import",
          field("path", $.scoped_import_path),
          "::",
          "{",
          commaSep1($.identifier),
          optional(","),
          "}"
        )
      ),

    scoped_import_path: ($) =>
      token(/[a-zA-Z_][a-zA-Z0-9_]*(::[a-zA-Z_][a-zA-Z0-9_]*)+/),

    enum_declaration: ($) =>
      seq(
        optional("pub"),
        "enum",
        field("name", $.identifier),
        optional($.generic_params),
        "{",
        repeat(choice($.enum_variant, ",", $._newline)),
        "}"
      ),

    enum_variant: ($) =>
      seq(
        field("name", $.identifier),
        optional(seq("(", parameterList($), ")"))
      ),

    struct_declaration: ($) =>
      seq(
        optional("pub"),
        "struct",
        field("name", $.identifier),
        optional($.generic_params),
        "{",
        layoutSeparated($, $.struct_field),
        "}"
      ),

    struct_field: ($) =>
      seq(
        field("name", $.identifier),
        optional("?"),
        ":",
        field("type", $.type_annotation)
      ),

    _statement: ($) =>
      choice(
        $.let_binding,
        $.const_binding,
        $.var_binding,
        $.if_statement,
        $.for_statement,
        $.while_statement,
        $.match_statement,
        $.retry_statement,
        $.cost_route_block,
        $.return_statement,
        $.throw_statement,
        $.fn_declaration,
        $.tool_declaration,
        $.skill_declaration,
        $.eval_pack_declaration,
        $.override_declaration,
        $.enum_declaration,
        $.struct_declaration,
        $.impl_block,
        $.interface_declaration,
        $.type_declaration,
        $.parallel_expression,
        $.parallel_each_expression,
        $.parallel_settle_expression,
        $.defer_statement,
        $.deadline_block,
        $.guard_statement,
        $.require_statement,
        $.mutex_block,
        $.scope_block,
        $.block_statement,
        $.select_block,
        $.break_statement,
        $.continue_statement,
        $.yield_expression,
        $.emit_expression,
        $.assignment,
        $.compound_assignment,
        $.expression_statement
      ),

    expression_statement: ($) => prec(1, $._expression),

    let_binding: ($) =>
      seq(
        optional("pub"),
        "let",
        field("name", $._binding_pattern),
        optional(seq(":", field("type", $.type_annotation))),
        "=",
        repeat(lineBreak($)),
        field("value", $._expression)
      ),

    const_binding: ($) =>
      seq(
        optional("pub"),
        "const",
        field("name", $._binding_pattern),
        optional(seq(":", field("type", $.type_annotation))),
        "=",
        repeat(lineBreak($)),
        field("value", $._expression)
      ),

    _binding_pattern: ($) =>
      choice(
        $.identifier,
        $.dict_pattern,
        $.list_pattern,
        $.pair_pattern
      ),

    if_statement: ($) =>
      prec.right(seq(
        "if",
        field("condition", $._expression),
        field("consequence", $.block),
        optional(seq("else", choice($.if_statement, $.block)))
      )),

    for_statement: ($) =>
      seq(
        "for",
        field("variable", $._binding_pattern),
        "in",
        field("iterable", $._expression),
        field("body", $.block)
      ),

    match_statement: ($) =>
      seq(
        "match",
        field("value", $._expression),
        "{",
        layoutSeparated($, $.match_arm),
        "}"
      ),

    match_arm: ($) =>
      seq(
        field("pattern", $._match_pattern),
        optional(seq("if", field("guard", $._expression))),
        "->",
        field("body", $.block)
      ),

    // An arm pattern is either a single expression or an or-pattern
    // made of two-plus `|`-separated alternatives. Keeping this as a
    // dedicated rule (rather than inlining `|` in `match_arm`) gives
    // tooling a stable anchor to walk when synthesising new arms.
    _match_pattern: ($) => choice($._expression, $.or_pattern),

    or_pattern: ($) =>
      prec.right(
        seq($._expression, "|", $._expression, repeat(seq("|", $._expression)))
      ),

    return_statement: ($) => prec.right(seq("return", optional($._expression))),

    fn_declaration: ($) =>
      seq(
        optional("pub"),
        optional("gen"),
        "fn",
        field("name", $.identifier),
        optional($.generic_params),
        "(",
        parameterList($),
        ")",
        optional(choice(
          prec(2, seq("->", $.type_predicate)),
          prec(1, seq("->", $.type_annotation))
        )),
        optional(seq("throws", field("throws", $.type_annotation))),
        optional($.where_clause),
        field("body", $.block)
      ),

    skill_declaration: ($) =>
      seq(
        optional("pub"),
        "skill",
        field("name", $.identifier),
        "{",
        statementSeparated(
          $,
          seq(
            field("field_name", $.identifier),
            field("field_value", $._expression)
          )
        ),
        "}"
      ),

    generic_params: ($) =>
      seq("<", commaSep1($.generic_param), ">"),

    generic_param: ($) =>
      seq(
        optional(field("variance", choice("in", "out"))),
        $.identifier
      ),

    // Type-argument lists in generic call expressions. The leading `<`
    // uses `token.immediate` so it must directly follow the function
    // expression without intervening whitespace — this is how generic
    // calls are written in real Harn corpora (`fold<int,int>(...)`,
    // never `fold <int,int>(...)`) and serves as a practical
    // disambiguator from binary `<` comparisons such as `i < 5`. The
    // runtime parser is more permissive (it backtracks on mismatch
    // instead of relying on whitespace), so this is a deliberate
    // tree-sitter-only restriction. Type-annotation generic forms
    // (`Foo<T>`, `List<int>`) have their own rule and are unaffected.
    where_clause: ($) =>
      seq(
        "where",
        commaSep1(seq(
          $.identifier,
          ":",
          $.type_annotation,
          repeat(seq("+", $.type_annotation))
        ))
      ),

    interface_declaration: ($) =>
      seq(
        "interface",
        field("name", $.identifier),
        optional($.generic_params),
        "{",
        layoutSeparated($, choice($.associated_type_declaration, $.interface_method)),
        "}"
      ),

    type_declaration: ($) =>
      seq(
        optional("pub"),
        "type",
        field("name", $.identifier),
        optional($.generic_params),
        "=",
        field("type", $.type_annotation)
      ),

    interface_method: ($) =>
      seq(
        "fn",
        field("name", $.identifier),
        optional($.generic_params),
        "(",
        parameterList($),
        ")",
        optional(seq("->", $.type_annotation))
      ),

    _expression: ($) =>
      choice(
        $.pipe_expression,
        $.ternary_expression,
        $.nil_coalescing_expression,
        $.binary_expression,
        $.range_expression,
        $.unary_expression,
        $.call_expression,
        $.generic_call_expression,
        $.method_call,
        $.subscript_expression,
        $.property_access,
        $.slice_expression,
        $.try_unwrap_expression,
        $.non_null_expression,
        $.parenthesized_expression,
        $.spawn_expression,
        $.try_expression,
        $.try_star_expression,
        $.deadline_block,
        $.parallel_expression,
        $.parallel_each_expression,
        $.parallel_settle_expression,
        $.if_statement,
        $.retry_statement,
        $.cost_route_block,
        $.match_statement,
        // Struct construction (`TypeName { field: value }`) is a general
        // expression, mirroring the runtime parser where it is a postfix on an
        // identifier primary (crates/harn-parser parse loop +
        // is_struct_construct_lookahead). Keeping it here — rather than only in
        // binding initializers and call arguments — lets `return Point {..}`,
        // ternary arms, and list/dict elements parse. GLR disambiguates it from
        // a block via the `dict_literal` shape (`{ ident: ... }` or `{}`); a
        // block of statements is not a dict literal, so `if Foo { stmt }` still
        // reads `Foo` + block. See conflict `[$._primary, $.struct_construct]`.
        $.struct_construct,
        $._primary
      ),

    binary_expression: ($) =>
      choice(
        prec.left(4, seq($._expression, repeat($._newline), "||", repeat($._newline), $._expression)),
        prec.left(5, seq($._expression, repeat($._newline), "&&", repeat($._newline), $._expression)),
        prec.left(6, seq($._expression, repeat($._newline), choice("==", "!="), repeat($._newline), $._expression)),
        prec.left(7, seq($._expression, repeat($._newline), choice("<", ">", "<=", ">="), repeat($._newline), $._expression)),
        prec.left(7, seq($._expression, "in", $._expression)),
        prec.left(7, seq($._expression, "not", "in", $._expression)),
        prec.left(8, seq($._expression, repeat($._newline), "+", repeat($._newline), $._expression)),
        prec.left(8, seq($._expression, "-", $._expression)),
        prec.left(10, seq($._expression, repeat($._newline), "*", repeat($._newline), $._expression)),
        prec.left(10, seq($._expression, repeat($._newline), "/", repeat($._newline), $._expression)),
        prec.left(10, seq($._expression, repeat($._newline), "%", repeat($._newline), $._expression)),
        // `**` binds tighter than a unary prefix on its left operand, so
        // `-2 ** 2` is `-(2 ** 2)` (see unary_expression below at prec 11).
        prec.right(12, seq($._expression, repeat($._newline), "**", repeat($._newline), $._expression))
      ),

    call_expression: ($) =>
      prec.left(
        13,
        seq(
          field("function", choice(
            $._value_identifier,
            $.call_expression,
            $.property_access,
            $.subscript_expression,
            $.parenthesized_expression
          )),
          "(",
          repeat(lineBreak($)),
          optional($.argument_list),
          repeat(lineBreak($)),
          ")"
        )
      ),

    // Generic-call form `func<T, U>(args)`. Kept distinct from
    // `call_expression` so that adding generic-type arguments to a callable
    // does not statically out-prioritise binary `<` comparisons whose LHS
    // happens to be a callable expression (`i < 5`, `obj.x < 5`, `(i) < 5`).
    // The leading `<` is captured by the `type_arguments` rule via
    // `token.immediate("<")`, which means the generic-call form requires
    // the `<` to immediately follow the function with no whitespace —
    // matching how generic calls are written in real Harn corpora.
    property_access: ($) =>
      prec.left(
        13,
        seq(
          field("object", $._expression),
          repeat($._newline),
          choice(".", "?."),
          field("property", choice($.identifier, $.keyword_identifier))
        )
      ),

    parenthesized_expression: ($) => seq("(", $._expression, ")"),

    try_expression: ($) =>
      prec.right(
        seq(
          "try",
          field("body", $.block),
          optional(
            seq(
              "catch",
              optional(choice(
                seq(
                  "(",
                  field("error_var", $.identifier),
                  optional(seq(":", field("error_type", $.type_annotation))),
                  ")"
                ),
                field("error_var", $.identifier)
              )),
              field("handler", $.block)
            )
          ),
          optional(seq("finally", field("finalizer", $.block)))
        )
      ),

    // try* EXPR — rethrow-into-catch operator (issue #26). Distinct from
    // try { ... } / try { ... } catch above; binds tighter than `try`'s
    // block form because the operand is an expression, not a block.
    // Whitespace between `try` and `*` is allowed but not required —
    // matching the runtime parser, which treats `try*` as a token pair.
    parallel_options: ($) =>
      seq(
        "with",
        "{",
        repeat(choice($._block_sep, $._line_sep)),
        field("key", $.identifier),
        ":",
        field("value", $._expression),
        repeat(seq(
          optional(","),
          repeat(choice($._block_sep, $._line_sep)),
          field("key", $.identifier),
          ":",
          field("value", $._expression),
        )),
        optional(","),
        repeat(choice($._block_sep, $._line_sep)),
        "}"
      ),

    string_content: (_) =>
      token.immediate(prec(1, /[^"\\$\n]+/)),

    integer_literal: (_) => /\d+/,

    true: (_) => "true",
